// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main app component displays tabs component when logged in 1`] = `
<div>
  <uisnackbarcontainer-stub queue-snackbars="true" position="right"></uisnackbarcontainer-stub>
  <uitoolbar-stub remove-brand-divider="" text-color="white" type="colored" background-color="primary">
    Book Club App
    <template></template></uitoolbar-stub>
  <uitabs-stub type="text">
    <uitab-stub title="Nominate Books">
      <nominatebooks-stub></nominatebooks-stub>
    </uitab-stub>
    <uitab-stub title="Vote"></uitab-stub>
    <uitab-stub title="Upcoming Meetings"></uitab-stub>
  </uitabs-stub>
</div>
`;

exports[`main app component displays welcome message when not logged in 1`] = `
<div>
  <uisnackbarcontainer-stub queue-snackbars="true" position="right"></uisnackbarcontainer-stub>
  <uitoolbar-stub remove-brand-divider="" text-color="white" type="colored" background-color="primary">
    Book Club App
    <template></template></uitoolbar-stub>
  <div>
    <h1>Welcome to a generic book club app!</h1>
    <p>Please log in by clicking the icon above to get started!</p>
  </div>
</div>
`;
